# termlauncher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: btop.rs  ls.rs  printenv.rs
src/: app.rs  error.rs  lib.rs  terminal.rs
src/terminals/: alacritty.rs  custom.rs  foot.rs  ghostty.rs  kitty.rs  mod.rs  st.rs  wezterm.rs
