[package]
name = "termlauncher"
description = "Your app, the user's terminal, done."
version = "0.2.1"
edition = "2024"
authors = ["Christopher Kaster <me@atomicptr.de>"]
categories = ["command-line-utilities"]
keywords = ["cli", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/atomicptr/termlauncher"

[dependencies]
log = "0.4.29"
which = "8.0.0"

[dev-dependencies]
simple_logger = "5.0"
